--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "create-react-app",
+  "name": "motekso-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "sass": "^1.43.4"
   },
   "scripts": {
     "dev": "BROWSER=none react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
