--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-scripts": "^4.0.3",
+    "react-twitter-embed": "^3.0.3",
     "sass": "^1.43.4"
   },
   "scripts": {
