Initial Motekso Frontend - Blog

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MoTekSo",
-  "name": "Modern Tech Solutions",
+  "short_name": "Motekso",
+  "name": "Motekso",
   "icons": [
     {
       "src": "favicon.ico",
