--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-twitter-embed": "^3.0.3",
     "sass": "^1.43.4"
