--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://api.motekso.co.uk"
+   "proxy": {
+      "*":{ "target" : "http://api.motekso.co.uk"}
+   } 
 }
