--- a/package.json
+++ b/package.json
@@ -24,7 +24,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-   "proxy": {
-      "*":{ "target" : "http://api.motekso.co.uk"}
-   } 
+   "proxy":"http://api.motekso.co.uk"
 }
