--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-   "proxy":"http://api.motekso.co.uk"
+   "proxy":"https://api.motekso.co.uk"
 }
