Chaged private to false package.json and set proxy

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "motekso-frontend",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "axios": "^0.24.0",
     "http-proxy-middleware": "^2.0.1",
@@ -25,5 +25,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://api.motekso.co.uk"
+  "proxy": "http://motekso.co.uk"
 }
