--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -60,7 +60,25 @@ client_max_body_size   50m;
        #proxy_set_header X-Forwarded-Proto https;
       #  proxy_set_header X-Forwarded-Port 443;
        #proxy_set_header X-Forwarded-For $remote_addr;
-       proxy_pass http://api.motekso.co.uk/;
+       proxy_pass http://localhost:3001/;
+       proxy_http_version 1.1;
+       proxy_set_header   Upgrade $http_upgrade;
+       proxy_set_header   Connection keep-alive;
+       proxy_set_header   Host $host;
+       proxy_cache_bypass $http_upgrade;
+       proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+       proxy_set_header   X-Forwarded-Proto $scheme;
+
+   }
+
+       location /api/ {
+       proxy_set_header Accept-Encoding "";
+       proxy_set_header X-Forwarded-Host $host;
+       proxy_set_header X-Forwarded-Path /;
+       #proxy_set_header X-Forwarded-Proto https;
+      #  proxy_set_header X-Forwarded-Port 443;
+       #proxy_set_header X-Forwarded-For $remote_addr;
+       proxy_pass http://localhost:8001/;
        proxy_http_version 1.1;
        proxy_set_header   Upgrade $http_upgrade;
        proxy_set_header   Connection keep-alive;
