Fixed uploaad picture, need to fic home and edit

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.24.0",
     "http-proxy-middleware": "^2.0.1",
     "react": "^16.6.1",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^16.6.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
