added Dockerfile.development and changed Dockerfile script to serve production

--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -12,15 +12,8 @@ RUN npm install --silent
 # Copies everything over to Docker environment
 COPY . .
 
-# Build for production.
-RUN npm run build --production
-
-# Install `serve` to run the application.
-RUN npm install -g serve
-
 # Uses port which is used by the actual application
-EXPOSE 5000
+EXPOSE 3000
 
 # Run application
-#CMD [ "npm", "start" ]
-CMD serve -s build
+CMD [ "npm", "start" ]
