--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": false,
   "dependencies": {
     "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
     "http-proxy-middleware": "^2.0.1",
+    "moment": "^2.29.3",
     "react": "^16.6.1",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^16.6.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-twitter-embed": "^3.0.3",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "timeago.js": "^4.0.2"
   },
   "scripts": {
     "dev": "BROWSER=none react-scripts start",
