--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "dependencies": {
     "axios": "^0.24.0",
+    "bootstrap": "^5.2.0",
     "date-fns": "^2.28.0",
     "http-proxy-middleware": "^2.0.1",
     "moment": "^2.29.3",
